--- a/OnlineTutor2/Views/StudentTest/Result.cshtml
+++ b/OnlineTutor2/Views/StudentTest/Result.cshtml
@@ -65,7 +65,7 @@
                     <i class="fas fa-@(percentage >= 80 ? "trophy" : percentage >= 60 ? "medal" : "times-circle")"></i>
                     @if (isSpellingResult)
                     {
-                        <span>Тест на правописание завершен!</span>
+                        <span>Тест на орфографию завершен!</span>
                     }
                     else if (isPunctuationResult)
                     {
