--- a/OnlineTutor2/Views/StudentTest/History.cshtml
+++ b/OnlineTutor2/Views/StudentTest/History.cshtml
@@ -18,7 +18,7 @@
                 <i class="fas fa-list"></i> Все тесты
             </a>
             <a asp-action="History" asp-route-testType="spelling" class="btn btn-@(testType == "spelling" ? "primary" : "outline-primary")">
-                <i class="fas fa-spell-check"></i> Правописание
+                <i class="fas fa-spell-check"></i> Орфография
             </a>
             <a asp-action="History" asp-route-testType="punctuation" class="btn btn-@(testType == "punctuation" ? "warning" : "outline-warning")">
                 <i class="fas fa-exclamation"></i> Пунктуация
@@ -100,7 +100,7 @@ else
         <div class="card mb-4">
             <div class="card-header">
                 <h5 class="mb-0">
-                    <i class="fas fa-spell-check text-primary"></i> Тесты на правописание
+                    <i class="fas fa-spell-check text-primary"></i> Тесты на орфографию
                 </h5>
             </div>
             <div class="card-body p-0">
