--- a/OnlineTutor2/Views/SpellingTest/Details.cshtml
+++ b/OnlineTutor2/Views/SpellingTest/Details.cshtml
@@ -416,6 +416,7 @@
 }
 
 @section Scripts {
+    <script src="~/js/layout.js" asp-append-version="true"></script>
     <script>
         let currentQuestionId = null;
 
